# DaC-Reference

./: .gitignore  .readthedocs.yml  LICENSE  PR_SUMMARY.md  README.md  catalog-info.yaml  dac.md  mkdocs.yml  pyproject.toml
docs/: about.md  conf.py  core_component_managing_detection_rules_in_a_vcs.md  core_component_managing_detection_rules_in_elastic_security.md  core_component_syncing_rules_and_data_from_elastic_security_to_vcs.md  core_component_syncing_rules_and_data_from_vcs_to_elastic_security.md  core_components_and_governance_models_of_dac.md  dac_abridged_guide.md  dac_concept_and_workflows.md  dac_quick_start_guide.md  duel_syncing_rules_and_data_between_kibana_and_vcs.md  etoe_reference_example.md  faq.md  feedback_and_resources.md  index.md  internals_of_the_detection_rules_repo.md  known_limitations.md  managing_detection_rules_in_a_vcs.md  managing_detection_rules_in_elastic_security.md  requirements.txt  syncing_rules_and_data_from_elastic_security_to_vcs.md  syncing_rules_and_data_from_vcs_to_elastic_security.md
