[tool.poetry.scripts]
build-docs = "sphinx.cmd.build:main"

[tool.poetry]
name = "dac-elastic-reference"
authors = ["Elastic"]
version = "0.1.0"
description = "A comprehensive reference and toolset for managing Elastic Security SIEM Rules using the Detections as Code methodology."
license = "Elastic license V2"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sphinx]
source-dir = "docs"
build-dir = "docs/_build"
builder = "html"

[tool.myst]
# MyST-Parser configuration options

[tool.poetry.urls]
"Homepage" = "https://github.com/elastic/DaC-Reference"
"Repository" = "https://github.com/elastic/DaC-Reference"
